# artivity

./: .hgignore  Artivity.sln  Artivity.userprefs  Artivity.workspace  README.md  changelog.xml  plugins.txt  setup.sh
Api/: Api.csproj  packages.config
Apid/: Apid.csproj  Bootstrapper.cs  HttpService.cs  ProgramBase.cs  app.config  artivity-apid  artivity-apid.desktop  packages.config
Apid.Mac/: Apid.Mac.csproj  Artivity.Apid.Mac.csproj  Main.cs  Program.cs  packages.config
Apid.Windows/: Apid.Windows.csproj  ArtivityService.cs  CopyToOutput.targets  Program.cs  Win32.cs  WindowsService.cs  app.config  debug.log.config  packages.config
Artivity.API/: Artivity.API.csproj
Artivity.Agent.Chromium/: background.js  manifest.json  package.crx  popup.html  popup.js
Artivity.Api.Client/: AUTHORS  Artivity.Api.Client.workspace  Makefile.am  client.project  configure  configure.ac  libartivity.pc.in  libtool
Artivity.Api.Client/.codelite/: Artivity.Api.Client.session  Artivity.ClientApi.session  refactoring.db
Artivity.Api.Client/Client/: Activity.cpp  Activity.h  ActivityLog.cpp  ActivityLog.h  Client.mk  Client.project  Client.txt  Property.h  PropertyMap.h  PropertyValue.h  Resource.cpp  Resource.h  Serializer.cpp  Serializer.h  XsdTypeMap.h  main.cpp
Artivity.Api.Client/Client/Activities/: Create.h  Delete.h  Undo.h  Update.h  View.h
Artivity.Api.Client/Client/Ontologies/: as.h  rdf.h  xsd.h
Artivity.Api.Client/debian/: changelog  control  copyright  rules
Artivity.Api.Client/src/: Activity.cpp  Activity.h  ActivityLog.cpp  ActivityLog.h  Client.project  Makefile.am  Property.h  PropertyMap.h  PropertyValue.h  Resource.cpp  Resource.h  Serializer.cpp  UriGenerator.h  artivity.h  curlresponse.cpp  main.cpp
Artivity.Api.Client/src/Activities/: Add.h  Close.h  Create.h  Delete.h  Open.h  Remove.h  Save.h  Undo.h  Update.h  View.h
Artivity.Api.Client/src/ObjectModel/: Activity.cpp  Activity.h  ActivityInfluence.h  Association.h  Dimensions.h  Entity.h  Generation.h  Invalidation.h  Person.h  Role.h  SoftwareAgent.h  SoftwareAssociation.h  Viewbox.h
Artivity.Api.Client/src/ObjectModel/Activities/: Add.h  Close.h  Create.h  CreateFile.h  Delete.h  DeleteFile.h  EditFile.h  Open.h  Remove.h  Save.h  Undo.h  Update.h  View.h
Artivity.Api.Client/src/ObjectModel/Entities/: FileDataObject.h  WebDataObject.h  XmlAttribute.h  XmlElement.h
Artivity.Api.Client/src/ObjectModel/Geometry/: BoundingCube.h  CoordinateSystem.h  Cube.h  Geometry.h  Rectangle.h
Artivity.Api.Client/src/ObjectModel/Influences/: Edit.h  Save.h  Undo.h
Artivity.Api.Client/src/Ontologies/: art.h  as.h  prov.h  svg.h  unit.h
Artivity.Api.Http/: Artivity.Api.Http.csproj  Makefile  NancyExtensions.cs  Options.cs  Program.cs  Web.config  app.config  artivity-apid  artivity-service.desktop  packages.config
Artivity.Api.Model/: App.config  Artivity.Api.Model.csproj  Artivity.Model.csproj  Models.cs  OntologyDiscovery.cs  app.config  packages.config
Artivity.Apid.Mac/: Artivity.Apid.Mac.csproj  FSEventsFileSystemWatcher.cs  FileSystemWatcher.cs  Info.plist  Main.cs  Program.cs  app.config  log.config  packages.config
Artivity.Apid.Modules.Journal/: .brackets.json  Artivity.Apid.Modules.Journal.csproj  JournalModule.cs
Artivity.Apid.Windows/: Artivity.Apid.Windows.csproj  ArtivityService.cs  CopyToOutput.targets  Program.cs  WindowsService.cs  app.config  debug.log.config  log.config
Artivity.Mac/: Main.cs  (+8 more)
krita/calligra-2.8.1/krita/plugins/extensions/artivity/: CMakeLists.txt  artivity.cc  artivity.h  artivity.rc  kritaartivity.desktop  log.cc  log.h
libartivity/: CMakeLists.txt  COPYING  Makefile.am  Makefile.in  build-osx.sh  client.project  configure  configure.ac  libartivity.pc.in  libartivity.project  libtool
libartivity/debian/: changelog  libartivity.install
libartivity/debian-dist/: Makefile
libartivity/src/: ActivityLog.cpp  ActivityLog.h  CMakeLists.txt  EditingSession.cpp  EditingSession.h  Makefile.am  Makefile.in  ProducerConsumer.h  Property.h  PropertyMap.cpp  PropertyMap.h  PropertyValue.h  Resource.cpp  Resource.h  Serializer.cpp  Serializer.h  UriGenerator.cpp  UriGenerator.h  XsdTypeMap.h  artivity.h  curlresponse.cpp  curlresponse.h  defines.h
libartivity/src/JSON/: jsonxx.cpp  jsonxx.h
libartivity/src/ObjectModel/: Activity.cpp  Activity.h  ActivityInfluence.h  Agent.h  Association.cpp  Association.h  Change.cpp  Change.h  Derivation.h  Entity.cpp  Entity.h  EntityInfluence.h  FileDataObject.h  Folder.h  Generation.h  Influence.cpp  Influence.h  Invalidation.h  PartialRenderingDataObject.cpp  PartialRenderingDataObject.h  Person.h  RenderingDataObject.cpp  RenderingDataObject.h  Revision.h  Role.h  SoftwareAgent.h  SoftwareAssociation.h  WebDataObject.h
libartivity/src/ObjectModel/Activities/: Browse.h  CreateFile.h  DeleteFile.h  EditFile.h  WebBrowsing.h
libartivity/src/ObjectModel/Entities/: FileDataObject.cpp  FileDataObject.h  Folder.h  Image.cpp  Image.h  InformationElement.cpp  InformationElement.h  Layer.h  Media.h  RasterImage.h  VectorImage.h  WebDataObject.h  XmlAttribute.h  XmlElement.h
libartivity/src/ObjectModel/Geometry/: BoundingCube.h  BoundingRectangle.h  Canvas.h  CartesianCoordinateSystem.h  CoordinateSystem.h  Cube.h  Geometry.h  Point.h  Rectangle.h  Text.h  Viewport.h
libartivity/src/ObjectModel/Influences/: ActivityInfluence.cpp  ActivityInfluence.h  Add.h  Derivation.h  Edit.h  End.h  EntityInfluence.cpp  EntityInfluence.h  Generation.h  Invalidation.h  Redo.cpp  Redo.h  Remove.h  Revision.h  Save.h  SaveAs.h  Start.h  Undo.cpp  Undo.h
libartivity/src/Ontologies/: art.h  dces.h  nfo.h  nie.h  prov.h  rdf.h  rdfs.h  svg.h  unit.h  xml.h  xsd.h
libartivity/windows/: DownloadBoost.ps1  GetBoost.bat  libartivity.sln
libartivity/windows/libartivity/: libartivity.vcxproj  libartivity.vcxproj.filters
libartivity/windows/libartivity-test/: ReadMe.txt  libartivity-test.cpp  libartivity-test.vcxproj  libartivity-test.vcxproj.filters  stdafx.cpp
libartivity/windows/libcurl/lib/static-release/: libcurl_a.lib  libcurl_a64.lib
(+1800 files in other folders)
